courses/430_programming-languages/assignment-4/tests/error/error14.sml
val prog =
  PROGRAM
    {decls=[],
     stmts=[ST_EXP {exp=EXP_UNARY {opnd=EXP_BOOL true,opr=UOP_MINUS}}]}
  : program
;
